Change tier template fragments cleanup

--- a/frontend/app/views/fragments/joiner/joinStepCounter.scala.html
+++ b/frontend/app/views/fragments/joiner/joinStepCounter.scala.html
@@ -1,5 +1,5 @@
 @(CurrentStep: Int, TotalSteps: Int)
 
-<div class="steps text-lead">
+<div class="steps">
 	Step @CurrentStep of @TotalSteps
 </div>
