--- a/frontend/app/views/testing/testUsers.scala.html
+++ b/frontend/app/views/testing/testUsers.scala.html
@@ -26,7 +26,7 @@
                 <div class="signin__actions">
                     <div class="signin__register">
                         <a class="action action--no-bottom-margin" href="@Config.idWebAppRegisterUrl("/")" target="_blank">Register Now</a>
-                        <p class="text-info">(Opens in new window)</p>
+                        <p class="text-note">(Opens in new window)</p>
                     </div>
                 </div>
             </div>
