--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -9,46 +9,38 @@
     <main role="main" class="page-content">
         @fragments.page.pageHeader("Guardian Live events are exclusively for Guardian members")
 
-        <section class="page-section page-section--bordered">
+        <section class="page-section page-section--no-padding">
             <div class="page-section__lead-in">
                 @fragments.joiner.joinStepCounter(1, 3)
             </div>
             <div class="page-section__content page-section__content--full">
-                <p class="text-lead">Choose a membership tier to continue with your booking</p>
-                <div class="package-list">
-                    <ul class="grid grid--bordered grid--3up-stacked">
-                        <li class="grid__item">
-                            @fragments.tier.benefitsPromo(Tier.Friend)
-                        </li>
-                        <li class="grid__item">
-                            @fragments.tier.benefitsPromo(Tier.Partner)
-                        </li>
-                        <li class="grid__item">
-                            @fragments.tier.benefitsPromo(Tier.Patron)
-                        </li>
-                    </ul>
-                </div>
+                <h2 class="h-section h-section--lead">Choose a membership tier to continue with your booking</h2>
+                <ul class="grid grid--slim grid--bordered grid--3up-stacked">
+                    <li class="grid__item">
+                        @fragments.tier.packagePromo(Tier.Friend)
+                    </li>
+                    <li class="grid__item">
+                        @fragments.tier.packagePromo(Tier.Partner)
+                    </li>
+                    <li class="grid__item">
+                        @fragments.tier.packagePromo(Tier.Patron)
+                    </li>
+                </ul>
             </div>
             <div class="page-section__supplementary">
-                <div class="aside aside--pull">
-                    @for(event <- eventOpt) {
-                        <p>You're buying tickets for:</p>
-                        <div class="event-snapshot">
-                            <div class="event-snapshot__media">
-                                <div class="delayed-image-load" data-src="@event.imgUrl" data-alt="Please upload an event image" data-class="responsive-img"></div>
-                            </div>
+                @for(event <- eventOpt) {
+                    <h4 class="h-subsection">You're buying tickets for:</h4>
+                    @fragments.event.itemSnapshot(event)
+                }
+            </div>
+        </section>
 
-                            <h2 class="event-snapshot__title">
-                                @if(event.isSoldOut){
-                                    <span class="event-status event-status--sold-out">Sold out</span>
-                                }
-                                @event.name.text
-                            </h2>
-                        </div>
-                        @fragments.event.stats(event)
-                        @fragments.pricing.priceInfoEvent(event)
-                    }
-                </div>
+        <section class="page-section">
+            <div class="page-section__content">
+                <h3 class="h-section">What's included</h3>
+                @fragments.tier.packageStack(Tier.Friend, "Benefits")
+                @fragments.tier.packageStack(Tier.Partner, "All Friend benefits, plus")
+                @fragments.tier.packageStack(Tier.Patron, "All Partner benefits, plus")
             </div>
         </section>
 
