--- a/frontend/assets/stylesheets/components/_stats.scss
+++ b/frontend/assets/stylesheets/components/_stats.scss
@@ -8,13 +8,18 @@
 }
 .stat-item {
     @include clearfix;
+    @include fs-data(3);
     border-bottom: 1px dotted $c-neutral3;
     padding-bottom: rem($gs-baseline / 2);
     margin-bottom: rem($gs-baseline / 2);
 }
 .stat-item__first {
-    float: left;
-    width: rem($gs-gutter * 2);
+    display: none;
+    @include mq(desktop) {
+        display: block;
+        float: left;
+        width: rem($gs-gutter * 2);
+    }
 }
 .stat-item__second {
     position: relative;
