--- a/frontend/assets/stylesheets/state/_responsive.scss
+++ b/frontend/assets/stylesheets/state/_responsive.scss
@@ -19,6 +19,11 @@
         display: none !important;
     }
 }
+.hidden-desktop {
+    @include mq($until: desktop) {
+        display: none !important;
+    }
+}
 
 .mobile-only {
     @include mq(tablet) {
