--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -80,6 +80,7 @@
 @import 'components/asides';
 @import 'components/benefits';
 @import 'components/payment';
+@import 'components/packages';
 @import 'components/pricing';
 @import 'components/stats';
 @import 'components/tier';
