--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -254,7 +254,9 @@ $mem-underline-white-trans: rgba(229, 208, 212, .5);
 $mem-event-button-hover: rgba(0, 0, 0, .65);
 
 $side-margins-top-magic-number: 114px;
-$border-bottom-color: rgba(255, 255, 255, .29);
+
+$c-border-brand: $mem-blue;
+$c-border-neutral: $c-neutral3;
 
 $flash-error-color: #d61d00;
 $flash-error-border: #ff998a;
