--- a/frontend/assets/stylesheets/components/_benefits.scss
+++ b/frontend/assets/stylesheets/components/_benefits.scss
@@ -22,7 +22,7 @@
 }
 .benefit__details {}
 .benefit__title {
-    @include fs-bodyHeading(2);
+    @include fs-header(1);
     padding: 0 0 rem($gs-baseline / 6) 0;
 }
 .benefit__copy {
