Refactor price-info styles to be conditionaly flexible

--- a/frontend/app/views/fragments/tier/tierHeaderPromo.scala.html
+++ b/frontend/app/views/fragments/tier/tierHeaderPromo.scala.html
@@ -7,6 +7,6 @@
         </div>
     </div>
     <div class="tier-header-promo__pricing">
-        @fragments.pricing.priceInfo(tier)
+        @fragments.pricing.priceInfo(tier, canFlex=false)
     </div>
 </div>
