--- a/frontend/app/views/fragments/pricing/priceInfo.scala.html
+++ b/frontend/app/views/fragments/pricing/priceInfo.scala.html
@@ -1,11 +1,11 @@
-@(tier: com.gu.membership.salesforce.Tier.Tier, isReversible: Boolean = false, canFlex: Boolean = false)
+@(tier: com.gu.membership.salesforce.Tier.Tier, isReversible: Boolean = false, canFlex: Boolean = true)
 
 @import model.Benefits
 
 @defining(Benefits.details(tier)) { benefits =>
     <div class="price-info@if(canFlex){ price-info--flex}@if(isReversible){ price-info--@tier.toString.toLowerCase}">
     @benefits.pricing.fold {
-        <div class="price-info__item price-info__item--last">
+        <div class="price-info__item price-info__item--single">
             <div class="price-info__detail">
                 <span class="price-info__value price-info__value--free">Free</span>
             </div>
