--- a/frontend/assets/stylesheets/components/_page.scss
+++ b/frontend/assets/stylesheets/components/_page.scss
@@ -68,10 +68,11 @@ $_page-offset: rem(gs-span(2) + $gs-gutter);
  * typically combined with page-headline and page-intro
  */
 .page-header {
+    max-width: rem(gs-span(11));
     padding: rem($gs-gutter / 2) 0 rem($gs-baseline * 3);
-
+}
+.page-header--aligned {
     @include mq(mem-full) {
-        width: rem(gs-span(11));
         padding-right: rem($gs-gutter);
         padding-left: $_page-offset;
     }
