--- a/frontend/assets/stylesheets/components/_patterns.scss
+++ b/frontend/assets/stylesheets/components/_patterns.scss
@@ -4,14 +4,20 @@
 
 .pattern {
     margin-top: rem($gs-gutter * 2);
-    border-top: 1px solid $c-neutral6;
 }
-.pattern__header {
-    margin-bottom: rem($gs-gutter);
-}
-.pattern__description {
-    color: $c-neutral2;
-}
+    .pattern__header {
+        margin-bottom: rem($gs-gutter);
+        border-top: 1px solid $c-neutral6;
+        padding-top: rem($gs-baseline / 2);
+    }
+    .pattern__title {
+        @include fs-data(6);
+    }
+    .pattern__description {
+        @include fs-data(4);
+        color: $c-neutral2;
+    }
+
 .pattern-nav {
     position: fixed;
     bottom: 0; right: 0;
