--- a/frontend/app/views/fragments/event/stats.scala.html
+++ b/frontend/app/views/fragments/event/stats.scala.html
@@ -1,29 +1,25 @@
-@(event: model.Eventbrite.RichEvent, showTime: Boolean = true, showLocation: Boolean = true)
+@(event: model.Eventbrite.RichEvent)
 
 @import views.support.Dates._
 
 <div class="stats-listing">
-    @if(showTime) {
-        <div class="stat-item">
-            <div class="stat-item__first">
-                <i class="icon icon-early_booking"></i>
-            </div>
-            <div class="stat-item__second">
-                <span itemprop="startDate" content="@event.start">@prettyDateWithTimeAndDayName(event.start)</span>
-            </div>
+    <div class="stat-item">
+        <div class="stat-item__first">
+            <i class="icon icon-early_booking"></i>
         </div>
-    }
-    @if(showLocation) {
-        <div class="stat-item">
-            <div class="stat-item__first">
-                <i class="icon icon-location"></i>
-            </div>
-            <div class="stat-item__second">
-                @if(event.venue.name) { @event.venue.name }
-                @for(location <- event.venue.address) {
-                    @if(event.venue.name){, } @location.city, @location.postal_code
-                }
-            </div>
+        <div class="stat-item__second">
+            <span itemprop="startDate" content="@event.start">@prettyDateWithTimeAndDayName(event.start)</span>
         </div>
-    }
+    </div>
+    <div class="stat-item">
+        <div class="stat-item__first">
+            <i class="icon icon-location"></i>
+        </div>
+        <div class="stat-item__second">
+            @if(event.venue.name) {@event.venue.name}@if(event.venue.address){, }
+            @for(location <- event.venue.address) {
+                @location.city, @location.postal_code
+            }
+        </div>
+    </div>
 </div>
