--- a/frontend/app/views/testing/testUsers.scala.html
+++ b/frontend/app/views/testing/testUsers.scala.html
@@ -16,7 +16,7 @@
                 <div class="text-intro">
                     <p>Your user will be valid for the next half hour. When registering please populate the following fields with your new test user key.</p>
                 </div>
-                <div class="aside-panel">
+                <div class="aside aside--panel">
                     <ul class="u-unstyled">
                         <li class="user-detail-list-item">First Name: <strong>@userString</strong></li>
                         <li class="user-detail-list-item">Username: <strong>@userString</strong></li>
