--- a/frontend/assets/stylesheets/components/_asides.scss
+++ b/frontend/assets/stylesheets/components/_asides.scss
@@ -3,24 +3,40 @@
    ========================================================================== */
 
 .aside {
-    border-top: 1px solid $mem-blue;
+    border: solid $c-border-brand;
+    border-width: 1px 0 0 0;
     padding-top: rem($gs-baseline/2);
     margin-bottom: rem($gs-gutter);
 }
     .aside__intro {
-        @include fs-bodyCopy(1);
-        margin-bottom: rem($gs-baseline * 2);
+        @include fs-bodyHeading(2);
+        padding-bottom: rem($gs-gutter);
     }
-
-.aside-panel {
-    background-color: $c-neutral6;
-    border-radius: rem($gs-baseline / 3);
-    padding: rem($gs-baseline * 2);
-    margin-bottom: rem($gs-baseline * 2);
-}
 
 .aside--pull {
     @include mq(desktop) {
         margin-top: -(rem($gs-gutter/2));
     }
+}
+
+.aside--section {
+    border-width: 1px 0 0 0;
+    padding-top: rem($gs-baseline/2);
+
+    @include mq(tablet) {
+        padding-top: 0;
+        border-width: 0;
+    }
+    @include mq(mem-full) {
+        border-width: 1px 0 0 0;
+        padding-top: rem($gs-baseline/2);
+    }
+}
+
+.aside--panel {
+    border: 0 none;
+    background-color: $c-neutral6;
+    border-radius: rem($gs-baseline / 3);
+    padding: rem($gs-baseline * 2);
+    margin-bottom: rem($gs-baseline * 2);
 }
