--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -508,7 +508,7 @@ $filter-icon-size: 18px;
     width: 100%;
     display: table;
     margin-bottom: rem($gs-baseline);
-    @include mq(desktop) {
+    @include mq(tablet) {
         display: block;
     }
 }
@@ -516,18 +516,21 @@ $filter-icon-size: 18px;
 .event-snapshot__title {
     margin-bottom: rem($gs-baseline / 2);
 }
+.event-snapshot__title {
+    @include fs-header(1);
+}
 .event-snapshot__media,
 .event-snapshot__content {
     display: table-cell;
     vertical-align: top;
-    @include mq(desktop) {
+    @include mq(tablet) {
         display: block;
     }
 }
 .event-snapshot__media {
     width: 30%;
     padding-right: $gutter-width-fluid;
-    @include mq(desktop) {
+    @include mq(tablet) {
         width: auto;
         padding-right: 0;
     }
