Fix non-fragment page-header items, fixes layout issues.

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -52,7 +52,7 @@
     <div class="event-header@if(eventType){ tone-@eventType}">
         <div class="event-header__container">
             <div class="event-masthead u-cf">
-                <div class="event-masthead__title section-header page-header case--lower">
+                <div class="event-masthead__title section-header case--lower">
                     <a href="@eventListingLink" class="minimal-link">@eventTypeLabel</a>
                 </div>
                 <h1 class="event-masthead__name">@event.name.text</h1>
