--- a/frontend/app/views/joiner/thankyou.scala.html
+++ b/frontend/app/views/joiner/thankyou.scala.html
@@ -22,7 +22,7 @@
 @main(title) {
 
     <main class="page-content">
-        <section class="page-header">
+        <section class="page-header page-header--aligned">
             <h1 class="page-headline">Hello @member.firstName.<br/> Welcome to Guardian Membership!</h1>
             <p class="page-intro">You're the newest member of the Guardian Membership community and we're thrilled to have you on board.</p>
             <p class="page-intro">We've sent confirmation of your membership to @member.email</p>
