--- a/frontend/app/views/staff/unauthorised.scala.html
+++ b/frontend/app/views/staff/unauthorised.scala.html
@@ -5,9 +5,8 @@
 @main("Unauthorised Staff") {
 
     <main class="page-content">
-        <section class="page-header">
-            <h1 class="page-headline">No Access</h1>
-        </section>
+
+        @fragments.page.pageHeader("No Access")
 
         <section class="page-section">
             <div class="page-section__content">
