--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -25,11 +25,12 @@
                 </section>
             </div>
             <div class="content__container content__container--border-dark content__footer">
-                <ul class="inline-list">
+
+                <ul class="inline-list inline-list--divided">
                     <li class="inline-list__item"><a href="/help">Help</a></li>
-                    <li class="inline-list__item">&#149;</li>
                     <li class="inline-list__item"><a id="qa-cancel-membership" href="/tier/cancel">Cancel Guardian membership</a></li>
                 </ul>
+
             </div>
         </div>
   </main>
