--- a/frontend/app/views/fragments/event/stats.scala.html
+++ b/frontend/app/views/fragments/event/stats.scala.html
@@ -15,10 +15,13 @@
         <div class="stat-item__first">
             <i class="icon icon-location"></i>
         </div>
-        <div class="stat-item__second" itemprop="location" itemscope itemtype="http://schema.org/Place">
+        <div class="stat-item__second copy" itemprop="location" itemscope itemtype="http://schema.org/Place">
             @if(event.venue.name) {@event.venue.name}@if(event.venue.address){, }
             @for(location <- event.venue.address) {
                 @location.city, @location.postal_code
+            }
+            @for(googleMapsLink <- event.venue.googleMapsLink) {
+                <a href="@googleMapsLink" data-link-name="Event Google Map">Google Map</a>
             }
         </div>
     </div>
