Re-add qa-join id to join button on homepage

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -21,7 +21,7 @@
     @* ===== Introduction ===== *@
     <section class="block-description block-description--right block-description--pull">
         <h1 class="text-feature">We're bringing the Guardian to life through live events and meet-ups. <a class="text-highlight" href="/join">Join and be part of the conversations that matter.</a></h1>
-        <a class="action action--no-bottom-margin" href="/join">Join today</a>
+        <a class="action action--no-bottom-margin" href="/join" id="qa-join">Join today</a>
     </section>
 
     @* ===== Feature panels ===== *@
