Move icons.scss to root to avoid build error from being on file in empty directory

--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -44,7 +44,7 @@
    ========================================================================== */
 
 // Data-uri'd icon sprites and extends
-@import 'icons/icons';
+@import 'icons';
 
 /* ==========================================================================
    Layout
