--- a/frontend/app/views/fragments/tier/packagePromo.scala.html
+++ b/frontend/app/views/fragments/tier/packagePromo.scala.html
@@ -16,11 +16,7 @@
             }
         </div>
         <div class="package__actions">
-            <a
-                class="action action--snap u-no-bottom-margin"
-                href="/join/@tier.toString.toLowerCase/enter-details"
-                data-link-name="Become a @tier"
-            >
+            <a class="action action--snap u-no-bottom-margin" href="/join/@tier.toString.toLowerCase/enter-details" data-link-name="Become a @tier">
                 <span class="action__label">
                     Become a @tier
                 </span>
