--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -15,7 +15,7 @@
             </div>
             <div class="page-section__content page-section__content--full">
                 <h2 class="h-section h-section--lead">Choose a membership tier to continue with your booking</h2>
-                <ul class="grid grid--slim grid--bordered grid--3up-stacked">
+                <ul class="grid grid--single-row grid--bordered grid--3up-stacked">
                     <li class="grid__item">
                         @fragments.tier.packagePromo(Tier.Friend, Some("#package-benefits-friend"))
                     </li>
