--- a/frontend/app/views/fragments/joiner/joinStepCounter.scala.html
+++ b/frontend/app/views/fragments/joiner/joinStepCounter.scala.html
@@ -1,5 +1,5 @@
-@(CurrentStep: Int, TotalSteps: Int)
+@(currentStep: Int, totalSteps: Int)
 
 <div class="steps">
-	Step @CurrentStep of @TotalSteps
+	Step @currentStep of @totalSteps
 </div>
