--- a/frontend/app/views/patterns/patterns.scala.html
+++ b/frontend/app/views/patterns/patterns.scala.html
@@ -22,7 +22,8 @@
     <main class="page-content">
 
     <div class="pattern-nav js-pattern-nav"></div>
-    @fragments.page.pageHeader("Pattern Library", Some("Documents common patterns used across the Membership site."), isInline=true)
+
+    <h1>Pattern Library</h1>
 
     @pattern("Base - Inline Text Elements") {
         <div class="copy">
