--- a/frontend/assets/stylesheets/components/_grid.scss
+++ b/frontend/assets/stylesheets/components/_grid.scss
@@ -21,7 +21,9 @@
     }
 }
 
-.grid--slim {
+// Drop bottom margins if we know we only
+// have a single row of grid items.
+.grid--single-row {
     @include mq(desktop) {
         .grid__item {
             margin-bottom: 0;
