Design refinement to choose tier

--- a/frontend/app/views/fragments/tier/tierTrail.scala.html
+++ b/frontend/app/views/fragments/tier/tierTrail.scala.html
@@ -7,7 +7,7 @@
 
 <div class="tier-trail">
     <h3 class="tier-trail__name">
-        <i class="icon icon--inline icon--medium icon-g-black"></i>
+        <i class="icon icon--inline icon--medium icon-g-@tier.toString.toLowerCase"></i>
         @tier
     </h3>
     @if(caption){
