Use leadin from Benefits, remove need to pass caption around

--- a/frontend/app/views/fragments/tier/tierHeaderPromo.scala.html
+++ b/frontend/app/views/fragments/tier/tierHeaderPromo.scala.html
@@ -3,7 +3,7 @@
 <div class="tier-header-promo">
     <div class="tier-header-promo__title">
         <div class="tier-trail">
-            @fragments.tier.tierTrail(tier)
+            @fragments.tier.tierTrail(tier, showCaption=false)
         </div>
     </div>
     <div class="tier-header-promo__pricing">
