--- a/frontend/app/views/fragments/tier/packageStack.scala.html
+++ b/frontend/app/views/fragments/tier/packageStack.scala.html
@@ -1,11 +1,11 @@
-@(tier: com.gu.membership.salesforce.Tier.Tier, caption: String = "")(implicit token: play.filters.csrf.CSRF.Token)
+@(tier: com.gu.membership.salesforce.Tier.Tier)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import model.Benefits
 @import com.gu.membership.salesforce.Tier
 
 <div class="package-stack">
     <div class="package-stack__header">
-        @fragments.tier.tierTrail(tier, caption)
+        @fragments.tier.tierTrail(tier)
     </div>
     <div class="package-stack__content">
         <ul class="list-stack">
