--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -41,13 +41,13 @@
             <div class="page-section__content">
                 <h3 class="h-section">What's included</h3>
                 <div id="package-benefits-friend">
-                    @fragments.tier.packageStack(Tier.Friend, "Benefits")
+                    @fragments.tier.packageStack(Tier.Friend)
                 </div>
                 <div id="package-benefits-partner">
-                    @fragments.tier.packageStack(Tier.Partner, "All Friend benefits, plus")
+                    @fragments.tier.packageStack(Tier.Partner)
                 </div>
                 <div id="package-benefits-patron">
-                    @fragments.tier.packageStack(Tier.Patron, "All Partner benefits, plus")
+                    @fragments.tier.packageStack(Tier.Patron)
                 </div>
             </div>
         </section>
